--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <header>
-    <h1>IELTS Classes by [Your Name]</h1>
+    <h1>IELTS Classes by Somik</h1>
     <p>Learn IELTS for Free – Videos + Study Material</p>
   </header>
 
