--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        GLOBAL STYLES
     ----------------------- */
     body { 
-      font-family: 'Helvetica Neue', Arial, sans-serif; /* Clean Apple-style font */
+      font-family: 'Roboto', Arial, sans-serif; /* Clean Apple-style font */
       margin: 0; padding: 0; 
       background: #fff; color: #333; 
       scroll-behavior: smooth; /* Smooth scrolling for nav links */
